--- a/DemoSession2_SpringData_JPA/src/main/resources/messages_fr_FR.properties
+++ b/DemoSession2_SpringData_JPA/src/main/resources/messages_fr_FR.properties
@@ -1,2 +1,12 @@
 msg=bonjour
-msg2= Le nom du produit {0}, {1}, {2} a bien été supprimé.
+msg2= Le nom du produit {0}, {1}, {2} a bien ï¿½tï¿½ supprimï¿½.
+
+id=identifiant
+name=Nom	
+quantity=QuantitÃ©
+status=Statut
+description=Description
+category_name=Nom de la catÃ©gorie
+photo=Photo
+price=Prix
+created=CrÃ©Ã©
