--- a/DemoSession2_SpringData_JPA/src/main/resources/messages_ja_JP.properties
+++ b/DemoSession2_SpringData_JPA/src/main/resources/messages_ja_JP.properties
@@ -1,2 +1,12 @@
 msg=\u3053\u3093\u306B\u3061\u306F
 msg2= \u88FD\u54C1\u540D {0}\u3001{1}\u3001{2} \u306E\u524A\u9664\u306B\u6210\u529F\u3057\u307E\u3057\u305F
+
+id=ID
+name=名前	
+quantity=数量
+status=ステータス
+description=説明
+category_name=カテゴリ名
+photo=写真
+price=価格
+created=作成されました
