--- a/DemoSession2_SpringData_JPA/src/main/resources/messages_vi_VN.properties
+++ b/DemoSession2_SpringData_JPA/src/main/resources/messages_vi_VN.properties
@@ -1,2 +1,12 @@
 msg=Xin chao
 msg2= Xóa sản phẩm {0}, {1}, {2} thành công
+
+id=STT
+name=Tên Sản Phẩm
+quantity=Số lượng
+status=Tình trạng
+description=Mô tả
+category_name=Phân loại
+photo=Ảnh
+price=Giá
+created=Ngày tạo
