--- a/DemoSession2_SpringData_JPA/src/main/resources/messages_en_US.properties
+++ b/DemoSession2_SpringData_JPA/src/main/resources/messages_en_US.properties
@@ -1,2 +1,12 @@
 msg=Hello
 msg2= Delete product {0}, {1}, {2} successful
+
+id=Id
+name=Name	
+quantity=Quantity	
+status=Status
+description=Description
+category_name=Category Name
+photo=Photo
+price=Price
+created=Created
